--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <button class ="choice1">Rock</button>
+    <button class ="choice2">Paper</button>
+    <button class ="choice3">Scissors</button>
+    <div>Scoreboard</div>
+    <div id="score"></div>
 </body>
 </html>
